tests/snapshots/yaml_suite_snapshots__yaml_suite_QF4Y_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- foo: bar\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2792291"
  json: "[\n  {\n    \"foo\": \"bar\"\n  }\n]\n"
  name: Spec Example 7.19. Single Pair Flow Mappings
  tags: spec flow mapping
  tree: "+STR\n +DOC\n  +SEQ []\n   +MAP {}\n    =VAL :foo\n    =VAL :bar\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[\nfoo: bar\n]\n"
