tests/snapshots/yaml_suite_snapshots__yaml_suite_QLJ7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: IRC
  name: Tag shorthand used in documents but only defined in the first
  tags: error directive tag
  tree: "+STR\n +DOC ---\n  +MAP <tag:example.com,2011:A>\n   =VAL :a\n   =VAL :b\n  -MAP\n -DOC\n +DOC ---\n"
  yaml: "%TAG !prefix! tag:example.com,2011:\n--- !prefix!A\na: b\n--- !prefix!B\nc: d\n--- !prefix!C\ne: f\n"
