tests/snapshots/yaml_suite_snapshots__yaml_suite_QT73_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Comment and document-end marker
  from: "@perlpunk"
  tags: comment footer
  yaml: "# comment\n...\n"
  tree: "+STR\n-STR\n"
  json: ""
  dump: ""
