tests/snapshots/yaml_suite_snapshots__yaml_suite_QT73_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ""
  from: "@perlpunk"
  json: ""
  name: Comment and document-end marker
  tags: comment footer
  tree: "+STR\n-STR\n"
  yaml: "# comment\n...\n"
